force-app/main/default/objects/agrid__Ruleset__c/agrid__Ruleset__c.object-meta.xml
<CustomObject>
    <label>Ruleset</label>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rulesets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>