force-app/main/default/objects/agrid__Ruleset__c/fields/agrid__Action__c.field-meta.xml
<CustomField>
    <fullName>agrid__Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>