force-app/main/default/objects/agrid__Ruleset__c/fields/agrid__Any_Rule_Is_True__c.field-meta.xml
<CustomField>
    <fullName>agrid__Any_Rule_Is_True__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Rule Is True</label>
    <type>Checkbox</type>
</CustomField>