force-app/main/default/objects/agrid__Ruleset__c/fields/agrid__Background_Color__c.field-meta.xml
<CustomField>
    <fullName>agrid__Background_Color__c</fullName>
    <label>Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>