force-app/main/default/objects/agrid__Ruleset__c/fields/agrid__Conditional_Formatting_Rule__c.field-meta.xml
<CustomField>
    <fullName>agrid__Conditional_Formatting_Rule__c</fullName>
    <label>Conditional Formatting Rule</label>
    <referenceTo>agrid__Conditional_Formatting_Rule__c</referenceTo>
    <relationshipLabel>Rulesets</relationshipLabel>
    <relationshipName>Rulesets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>