force-app/main/default/objects/agrid__Ruleset__c/fields/agrid__Font_Style__c.field-meta.xml
<CustomField>
    <fullName>agrid__Font_Style__c</fullName>
    <label>Font Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>